--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -19,12 +19,12 @@
   			</header>
   			<nav class="main" id="n1" role="navigation">
   				<span><a href="/">Inicio</a></span>
-  				<span><a href="/quizes/question">Preguntas</a></span>
+  				<span><a href="/quizes">Preguntas</a></span>
   				<span><a href="/author">Créditos</a></span>
   			</nav>
-  			<section class="main" id="s1">
-  				<%- body %>
-  			</section>
+  			<section class='main' id='f1'>
+          <div><%- body %></div>
+        </section>
   			<footer class="main" id="f1">
   				<a href="http://es.wikipedia.org/wiki/Quiz">¿Qúé es un Quiz?</a>
   				<a href="https://github.com/iamwao/quiz" target="_blank">Ver en GitHub</a>
