--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,2 +1,4 @@
-<%= respuesta %><p>
-<a href="/quizes/question">Intentelo de nuevo</a>
+<p>
+	<%= respuesta %><p>
+	<a href="/quizes/<%= quiz.id %>">Volver</a>
+</p>
