--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -7,6 +7,13 @@
 			<td>
 				<a href="quizes/<%= quizes[i].id %>/edit"><button type="button">editar</button></a>
 			</td>
+			<td>
+		    	<form method="POST" action="quizes/<%= quizes[i].id %>?_method=delete">
+		          <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+		            borrar
+		          </button>
+		        </form>
+		    </td>
 		</tr>
 	<% } %>
 </table>
