--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,3 +1,8 @@
+<form method="GET" action="quizes?search=search">
+	<input type="text" placeholder="Escriba aquí" name="search">
+	<input type="button" value="Buscar">
+</form>
+<% if(quizes.length > 0){ %>
 <table>
 	<tr>
 		<td>Pregunta</td>
@@ -22,6 +27,10 @@
 		    </td>
 		</tr>
 	<% } %>
+<% }else{ %>
+	<br>
+	<h3>No existen preguntas</h3>
+<% } %>
 </table>
 <br>
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
