--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,6 +1,6 @@
 <form method="GET" action="quizes?search=search">
 	<input type="text" placeholder="Escriba aquí" name="search">
-	<input type="button" value="Buscar">
+	<input type="submit" value="Buscar">
 </form>
 <% if(quizes.length > 0){ %>
 <table>
