--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -15,6 +15,7 @@
 				<a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a>
 			</td>
 			<td> <%= quizes[i].tema %> </td>
+			<%if(session.user){%>
 			<td>
 				<a href="quizes/<%= quizes[i].id %>/edit"><button type="button">editar</button></a>
 			</td>
@@ -25,6 +26,7 @@
 		          </button>
 		        </form>
 		    </td>
+		    <%}%>
 		</tr>
 	<% } %>
 <% }else{ %>
@@ -33,4 +35,6 @@
 <% } %>
 </table>
 <br>
+<%if(session.user){%>
 <a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<%}%>
